fix: remove extra space after footer

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,8 +120,10 @@
   * {
     @apply border-border outline-ring/50;
   }
+  html,
   body {
     @apply bg-background text-foreground;
+    background-color: #09090b;
     overflow-x: hidden;
   }
 }
